fix spacing above finder form on homepage

--- a/candidates/static/candidates/_finder.scss
+++ b/candidates/static/candidates/_finder.scss
@@ -100,7 +100,7 @@
   .finder__forms {
     position: relative;
     background-color: #fff;
-    margin: -3em auto 0 auto;
+    margin: -5em auto 0 auto;
     padding: 2em 4em 0 4em;
 
     &:before,
